# IR_RELOCATE

./: CMakeLists.txt  README.md  test.txt
Comlib_Linux/include/: SerialCom.h  com_prop.h  comlib.h
Comlib_Linux/src/: .SerialCom.cpp.swn  .SerialCom.cpp.swo  SerialCom.cpp  com_command.cpp  com_execute.cpp  com_lib.cpp  main.cpp
GETTIME/: gettime.cpp  gettime.h
include/: GetLocation.h  ImageProcess.h  main.h
src/: GetLocation.cpp  ImageProcess.cpp  main.cpp  sixpoints.cpp
